examples/smlfmt-1.2.0/test/fail/bad-start-if-then-else.sml
val x =
  2 + 3 + 4 + if true then 1 else 0
